fix: 데이터 동기화 관련 기능 수정 (#74)
* feat: Review 기능 구현

* feat: 활동 참여 정보 동기화를 위한 기초 코드

* fix: 데이터 업데이트 기능 수정

* fix: 활동 정보 응답에 위도 경도 값도 추가함